# skillfortify

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: asbom.md  commands.md  getting-started.md  skill-lock-json.md
src/skillfortify/: __init__.py  _watermark.py  exceptions.py  qualixar_attribution.py  qualixar_watermark.py
tests/: conftest.py  test_smoke.py
tests/cli/: __init__.py  conftest.py  test_dashboard_cmd.py  test_error_handling.py  test_frameworks_cmd.py  test_lock.py  test_output.py  test_registry_cmd.py  test_sbom.py  test_scan.py  test_trust.py  test_verify.py
tests/core/: test_analyzer.py
tests/dashboard/: conftest.py  test_data_prep.py  test_generator.py
tests/discovery/: __init__.py  helpers.py  test_ide_registry.py  test_scan_system.py  test_system_scanner.py
tests/integration/: __init__.py  test_cross_module.py  test_full_pipeline.py  test_scan_directory.py
tests/parsers/: test_agno.py  test_anthropic_sdk.py  test_autogen.py  test_camel.py  test_claude_skills.py  test_composio.py  test_composio_advanced.py  test_crewai.py  test_dify_plugin.py  test_flowise.py  test_google_adk.py  test_google_adk_security.py  test_haystack.py  test_haystack_integration.py  test_langchain.py  test_llamaindex.py  test_mastra.py  test_mcp_config.py  (+11 more)
wiki/: ASBOM-Guide.md  CLI-Reference.md  FAQ.md  Formal-Foundations.md  Getting-Started.md  Home.md  Roadmap.md  Skill-Lock-JSON.md  SkillFortifyBench.md  Supported-Formats.md  Trust-Levels.md  Why-SkillFortify.md
(+211 files in other folders)
